# ChangeLog for kde-base/kdebase
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.443 2008/05/12 16:20:39 ranger Exp $

  12 May 2008; Brent Baude <ranger@gentoo.org> kdebase-3.5.9-r3.ebuild:
  Marking kdebase-3.5.9-r3 ppc and ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> kdebase-3.5.9-r3.ebuild:
  alpha/ia64/sparc stable wrt #221063

  11 May 2008; Markus Rothe <corsair@gentoo.org> kdebase-3.5.9-r3.ebuild:
  Stable on ppc64; bug #221063

*kdebase-3.5.9-r3 (27 Apr 2008)

  27 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kdialog-3.5.9-kdeeject-186028.patch, files/agent-startup.sh,
  +kdebase-3.5.9-r3.ebuild:
  Added a patch to fix ejecting by using HAL (if the necessary tools are
  installed). Fixes bug 186028. Added a template in agent-startup.sh for
  starting rxvt-unicode. Fixes bug 189201.

*kdebase-3.5.9-r2 (15 Apr 2008)

  15 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  -files/kdesktop-3.5.3-screensaver.patch,
  -files/kdebase-startkde-3.5.3-xinitrcd.patch,
  -files/kdebase-kioslaves-3.5.5-fstab.patch,
  -files/kwin-3.5.5-input-shape.patch,
  -files/nsplugins-3.5.5-npapi-64bit.patch,
  -files/kate-3.5.5-visibility.patch,
  -files/nsplugins-3.5.6-keyboard-handler.diff,
  -files/konqueror-3.5.7-185603-spoofing.diff,
  -files/konqueror-3.5.7-location.patch, -files/kdm-3.5.7-login.diff,
  -files/kate-3.5.7-session-save.patch, +kdebase-3.5.9-r2.ebuild:
  Re-added Lubos Lunak's Xinerama patch as kindly provided by Vladimir Brik
  on bug 211469. Removed obsolete patches.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -files/kdebase-4.0.1-opengl.patch,
  -files/kdebase-4.0.1-pam-optional.patch, -files/gentoo-startkde.patch,
  -kdebase-4.0.1.ebuild:
  Old.

*kdebase-4.0.1 (10 Mar 2008)

  10 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kdebase-4.0.1-opengl.patch,