@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdeutils
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.232 2008/05/12 17:38:35 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.233 2008/05/13 15:23:09 jer Exp $
+
+  13 May 2008; Jeroen Roovers <jer@gentoo.org> kdeutils-3.5.9-r1.ebuild:
+  Stable for HPPA (bug #221063).
 
   12 May 2008; Brent Baude <ranger@gentoo.org> kdeutils-3.5.9-r1.ebuild:
   Marking kdeutils-3.5.9-r1 ppc and ppc stable for bug 221063
